--- a/includes/header.html
+++ b/includes/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
       <img src="img/dg6.svg" alt="" width="30" height="30" class="d-inline-block align-text-top">
-      Brain Game
+      Simon Game
     </a>
   </div>
 </nav>
